--- a/gui/ui/package.json
+++ b/gui/ui/package.json
@@ -16,6 +16,8 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@babel/types": "^7.18.13",
+    "@types/node": "^18.7.13",
     "@vitejs/plugin-vue": "^3.0.3",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
