--- a/gui/ui/tsconfig.json
+++ b/gui/ui/tsconfig.json
@@ -2,5 +2,7 @@
     "extends": "./tsconfig-preset",
     "compilerOptions": {
         "baseUrl": "."
-    }
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "public"]
 }
