--- a/gui/ui/package.json
+++ b/gui/ui/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "ui",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "build:android": "vue-tsc --noEmit && vite build && npx cap sync && npx cap open android",
-    "preview": "vite preview",
-    "ionic:build": "npm run build",
-    "ionic:serve": "npm run dev"
-  },
-  "dependencies": {
-    "@capacitor/android": "^4.1.0",
-    "@capacitor/cli": "^4.1.0",
-    "@capacitor/core": "^4.1.0",
-    "@jamescoyle/vue-icon": "^0.1.2",
-    "@mdi/js": "^7.0.96",
-    "axios": "^0.27.2",
-    "vue": "^3.2.37",
-    "vue-router": "4"
-  },
-  "devDependencies": {
-    "@babel/types": "^7.18.13",
-    "@types/node": "^18.7.13",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vue-tsc": "^0.39.5"
-  }
+    "name": "ui",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc --noEmit && vite build --emptyOutDir",
+        "build:android": "vue-tsc --noEmit && vite build && npx cap sync && npx cap open android",
+        "preview": "vite preview",
+        "ionic:build": "npm run build",
+        "ionic:serve": "npm run dev"
+    },
+    "dependencies": {
+        "@capacitor/android": "^4.1.0",
+        "@capacitor/cli": "^4.1.0",
+        "@capacitor/core": "^4.1.0",
+        "@jamescoyle/vue-icon": "^0.1.2",
+        "@mdi/js": "^7.0.96",
+        "axios": "^0.27.2",
+        "vue": "^3.2.37",
+        "vue-router": "4"
+    },
+    "devDependencies": {
+        "@babel/types": "^7.18.13",
+        "@types/node": "^18.7.13",
+        "@vitejs/plugin-vue": "^3.0.3",
+        "typescript": "^4.6.4",
+        "vite": "^3.0.7",
+        "vite-tsconfig-paths": "^3.5.0",
+        "vue-tsc": "^0.39.5"
+    }
 }
